Fixed messages not scroling when overflowing

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -45,6 +45,6 @@ body {
 }
 
 #messages {
-  display: flex;
-  flex-direction: column;
+  overflow-y: auto;
+  height: 600px;
 }
